--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\15\\tomcat90.properties
-j2ee.server.home=C:/Users/DELL/Downloads/apache-tomcat-9.0.68-windows-x64/apache-tomcat-9.0.68
-j2ee.server.instance=tomcat90:home=C:\\Users\\DELL\\Downloads\\apache-tomcat-9.0.68-windows-x64\\apache-tomcat-9.0.68
-user.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\15\\build.properties
+deploy.ant.properties.file=C:\\Users\\hi\\AppData\\Roaming\\NetBeans\\14\\tomcat90.properties
+j2ee.server.home=D:/App/TomCat
+j2ee.server.instance=tomcat90:home=D:\\App\\TomCat
+user.properties.file=C:\\Users\\hi\\AppData\\Roaming\\NetBeans\\14\\build.properties
