--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\15\\tomcat90.properties
-j2ee.server.home=C:/Users/DELL/Downloads/apache-tomcat-9.0.68-windows-x64/apache-tomcat-9.0.68
-j2ee.server.instance=tomcat90:home=C:\\Users\\DELL\\Downloads\\apache-tomcat-9.0.68-windows-x64\\apache-tomcat-9.0.68
-user.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\15\\build.properties
+deploy.ant.properties.file=C:\\Users\\FPTSHOP\\AppData\\Roaming\\NetBeans\\12.4\\tomcat90.properties
+file.reference.gson-2.8.2.jar=E:\\New folder\\Code\\JavaCode\\gson-2.8.2.jar
+file.reference.mysql-connector-java-8.0.30.jar=E:\\New folder\\Code\\JavaCode\\mysql-connector-java-8.0.30.jar
+j2ee.server.home=E:/New folder/App/SQLSever/TomCat
+j2ee.server.instance=tomcat90:home=E:\\New folder\\App\\SQLSever\\TomCat
+user.properties.file=C:\\Users\\FPTSHOP\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
