--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.8.2.jar=C:\\Users\\DELL\\Downloads\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=D:\\Code\\code java\\gson-2.8.2.jar
 file.reference.jackson-annotations-2.14.2.jar=C:\\Users\\DELL\\Downloads\\jar_files\\jackson-annotations-2.14.2.jar
 file.reference.jackson-core-2.14.2.jar=C:\\Users\\DELL\\Downloads\\jar_files\\jackson-core-2.14.2.jar
 file.reference.jackson-databind-2.14.2.jar=C:\\Users\\DELL\\Downloads\\jar_files\\jackson-databind-2.14.2.jar
 file.reference.java-jwt-4.4.0.jar=C:\\Users\\DELL\\Downloads\\jar_files\\java-jwt-4.4.0.jar
 file.reference.jjwt-0.9.1.jar=C:\\Users\\DELL\\Downloads\\jar_files\\jjwt-0.9.1.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\DELL\\Downloads\\mysql-connector-java-8.0.30.jar
+file.reference.mysql-connector-java-8.0.30.jar-1=D:\\Code\\code java\\mysql-connector-java-8.0.30.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,7 +52,9 @@ javac.classpath=\
     ${file.reference.jackson-annotations-2.14.2.jar}:\
     ${file.reference.jackson-core-2.14.2.jar}:\
     ${file.reference.jackson-databind-2.14.2.jar}:\
-    ${file.reference.java-jwt-4.4.0.jar}
+    ${file.reference.java-jwt-4.4.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar-1}:\
+    ${file.reference.gson-2.8.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
