FE và BE phần thanh toán hóa đơn

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -60,6 +60,22 @@
         <servlet-name>ProcessGetKeyWordSearch</servlet-name>
         <servlet-class>controller.shop.ProcessGetKeyWordSearch</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProcessProductDetail</servlet-name>
+        <servlet-class>controller.shop.ProcessProductDetail</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>test</servlet-name>
+        <servlet-class>controller.shop.NewServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ProcessProductPayment</servlet-name>
+        <servlet-class>controller.shop.ProcessProductPayment</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ProcessOrderPayment</servlet-name>
+        <servlet-class>controller.shop.ProcessOrderPayment</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>NewServlet</servlet-name>
         <url-pattern>/NewServlet</url-pattern>
@@ -119,6 +135,18 @@
     <servlet-mapping>
         <servlet-name>ProcessGetKeyWordSearch</servlet-name>
         <url-pattern>/ProcessGetKeyWordSearch</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProcessProductDetail</servlet-name>
+        <url-pattern>/product-detail</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>test</servlet-name>
+        <url-pattern>/test</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProcessOrderPayment</servlet-name>
+        <url-pattern>/payment</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
