--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -76,6 +76,10 @@
         <servlet-name>ProcessOrderPayment</servlet-name>
         <servlet-class>controller.shop.ProcessOrderPayment</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProcessShopHomePage</servlet-name>
+        <servlet-class>controller.shop.ProcessShopHomePage</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>NewServlet</servlet-name>
         <url-pattern>/NewServlet</url-pattern>
@@ -147,6 +151,10 @@
     <servlet-mapping>
         <servlet-name>ProcessOrderPayment</servlet-name>
         <url-pattern>/payment</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProcessShopHomePage</servlet-name>
+        <url-pattern>/shop</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
